# hamr_control

./: .gitignore  README.md
compa_control_py/: package.xml  setup.cfg  setup.py
compa_control_py/compa_control_py/: compa_controller.py  compa_odom_graph.py  compa_pid_graph.py  rpy_tf_graph.py  tf_trail_node.py
compa_description/: CMakeLists.txt  package.xml
compa_description/meshes/: base_link.STL  left_rocker_link.STL  leverage_link.STL  pitch_link.STL  right_rocker_link.STL  right_wheel_link.STL  rod_link.STL  roll_link.STL  sphere_link.STL  yaw_plate_link.STL
compa_description/rviz/: holonomy_viz_config.rviz  urdf_config.rviz
compa_description/urdf/: camera.urdf.xacro  common_properties.urdf.xacro  compa.urdf.xacro  compa_back.urdf.xacro  compa_gazebo.urdf.xacro
compa_slam/: .gitignore  CMakeLists.txt  README.md  package.xml
compa_slam/config/: gazebo_bridge_slam.yaml  realsense_d455.yaml  record_slam_qos.yaml  rtabmap.yaml
compa_slam/docs/: HANDOFF.md
compa_slam/launch/: realsense.launch.py  record_trajectory.launch.py  replay_map_sim.launch.py  rtabmap_real.launch.py  rtabmap_sim.launch.py  slam_sim.launch.py
compa_slam/scripts/: analyze_rosbag.py  map_to_sim.py  record_compa_slam_bag
compa_slam/urdf/: compa_d455.urdf.xacro  compa_slam.urdf.xacro
compa_slam/worlds/: feature_world.sdf
hamr_bringup/: CMakeLists.txt  package.xml
hamr_bringup/config/: compa_pid_params.yaml  ekf.yaml  ekf_mag.yaml  ekf_orientation.yaml  ekf_trial_vy_gyro.yaml  gazebo_bridge.yaml  gazebo_bridge_compa.yaml  hamr_hw_control_params.yaml  hamr_pid_params.yaml  hamr_uros_bridge.yaml  record_qos.yaml
hamr_bringup/launch/: bringup.launch.py  compa.launch.xml  compa_maze.launch.xml  gridmap_rviz.launch.py  hamr.launch.xml  hamr_HW.launch.xml  hamr_HW_maze.launch.xml  hamr_maze.launch.xml  hamr_offline_ekf.launch.xml  hamr_rough_terrain.launch.xml  kartik_controller.launch.xml  rviz_display.launch.xml
hamr_bringup/scripts/: live_mag_plot  measure_encoder_resolution  open_loop_wheel_calibration  record_hamr_test_bag  record_hamr_vicon_bag
hamr_bringup/worlds/: 2.5D_HAMR_map.sdf  2.5D_maze.sdf  2.5D_rocky.sdf  2.5D_rocky_intense.sdf  2.5D_smooth.sdf  GMU_verti_arena_2.5D.sdf  compa_OR_test_map.sdf  cones_and_cubes_world.sdf  empty_world.sdf  emptyrr_world.sdf
hamr_control/: package.xml  setup.cfg  setup.py
hamr_control/hamr_control/: hamr_controller.py  hamr_controller_hw.py  hamr_odom_graph.py  hamr_pid_graph.py
hamr_control/scripts/: hamr_controller_py
hamr_control_cpp/: CMakeLists.txt  package.xml
hamr_control_cpp/include/hamr_control_cpp/: ImageToGridmap.hpp
hamr_control_cpp/src/: ImageToGridmap.cpp  astar_search.cpp  compa_path_tracer.cpp  cost_map_publisher.cpp  hamr_control_node.cpp  hamr_controller.cpp  hamr_path_tracer.cpp  image_to_gridmap_node.cpp  map_publisher.cpp  or_planner.cpp  prm_builder.cpp
hamr_control_exp/: package.xml  setup.cfg  setup.py
hamr_control_exp/config/: exp_params.yaml
hamr_control_exp/hamr_control_exp/: lqr_controller_node.py  metrics_node.py  mpc_controller_node.py  traj_gen_node.py
hamr_control_exp/hamr_control_exp/analysis/: analyze_tracking.py
hamr_control_exp/hamr_control_exp/common/: controller_base.py  kinematics.py  robot_state.py
hamr_control_exp/hamr_control_exp/trajectory/: path_processing.py  smoothing.py  time_param.py
hamr_control_exp/launch/: exp_stack.launch.py  hamr_exp_HW.launch.xml  hamr_exp_HW_maze.launch.xml  hamr_exp_sim.launch.xml
hamr_control_exp/test/: test_kinematics.py  test_trajectory.py
hamr_description/: CMakeLists.txt  package.xml
hamr_description/meshes/: base_link.stl  left_caster_link.stl  left_caster_wheel_link.stl  left_wheel_link.stl  right_caster_link.stl  right_caster_wheel_link.stl  right_wheel_link.stl  turret_link.stl
hamr_description/rviz/: PID_tuning.rviz  config_maze.rviz  urdf_config.rviz
hamr_description/urdf/: camera.xacro  common_properties.xacro  hamr.urdf.xacro  hamr_gazebo.xacro  hamr_sw.xacro  hamr_sw_simplified.xacro  hamr_sw_v_simplified.xacro
hamr_interfaces/: CMakeLists.txt  package.xml
hamr_interfaces/msg/: LiveGains.msg  PlannedTrajectory.msg  ReferenceTraj.msg  StateError.msg
hamr_odometry/: package.xml  setup.cfg  setup.py
hamr_odometry/hamr_odometry/: holonomic_odom_node.py
hamr_teleop/: CMakeLists.txt  package.xml
hamr_teleop/src/: teleop_node.cpp
hamr_uros_bridge/: CMakeLists.txt  package.xml
hamr_uros_bridge/src/: odometry_eval.cpp  relay_node.cpp
map/: blank_10x10.pgm  hamr_maze.pgm  hamr_maze_big.pgm  hamr_maze_big_square.pgm  hamr_maze_simple.pgm  map.yaml
reference_trajectory/: package.xml  setup.cfg  setup.py
reference_trajectory/reference_trajectory/: waypoint_traj.py  waypoint_traj_sequence.py  waypoint_traj_simple.py
reference_trajectory/reference_trajectory/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
reference_trajectory/reference_trajectory/log/: latest_build
rosbags/: analyze_hamr_vicon_straight.py  analyze_latest_hamr_bag.sh
