<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hamr_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cedrich@seas.upenn.edu">cedric</maintainer>
  <maintainer email="kartik8virmani@gmail.com">cedric</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>rviz2</depend>
  <depend>grid_map_demos</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>hamr_control</exec_depend>
  <exec_depend>hamr_odometry</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
