<?xml version="1.0"?>
<package format="3">
  <name>hamr_uros_bridge</name>
  <version>0.0.1</version>
  <description>UART relay for HAMR: subscribes to wheel/turret cmd_vel and sends framed packets to ESP.</description>

  <maintainer email="kartik8virmani@gmail.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
